[tool.poetry]
name = "jupiter-notes"
version = "0.1.0"
description = ""
authors = ["F4ever <raman.s@lido.fi>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.2.4"
jupyterlab-execute-time = "^3.1.2"
jupyterlab-skip-traceback = "^5.1.0"
jupyterlab-lsp = "^5.1.0"
python-lsp-server = "^1.11.0"
jupyterlab-unfold = "^0.3.2"
voila-gridstack = "^0.4.0"
pyright = "^1.1.373"
theme-darcula = "^4.0.0"
web3 = "^6.20.1"
ipywidgets = "^8.1.3"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
